--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ install:
     - go get -t -v
 
 script:
-    - go test -v ./...
+    - go test -v
 
 go:
-    - 1.5
-    - tip
+    - 1.10.x
+    - 1.11.x
