--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -26,7 +26,7 @@ sonar.test.exclusions=**/vendor/**
 # =====================================================
 
 # sonar.go.gometalinter.reportPaths=gometalinter-report.out
-#sonar.go.govet.reportPaths=govet-report.out
+sonar.go.govet.reportPaths=govet-report.json
 #sonar.go.golint.reportPaths=golint-report.out
-# sonar.go.tests.reportPaths=report.json
+sonar.go.tests.reportPaths=gotest-report.json
 sonar.go.coverage.reportPaths=profile.cov
