--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,7 @@ sonar.projectKey=FATHOM5_haversine
 sonar.projectVersion=1.0
 
 sonar.sources=.
+sonar.inclusions=**/*.go
 sonar.exclusions=**/*_test.go,**/vendor/**
  
 sonar.tests=.
