task(CI): added metadata

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,10 +17,10 @@ sonar.test.exclusions=**/vendor/**
 #   Meta-data for the project
 # =====================================================
 
-# sonar.links.homepage=https://github.com/SonarSource/sonarcloud_example_go-sqscanner-travis
-# sonar.links.ci=https://travis-ci.org/SonarSource/sonarcloud_example_go-sqscanner-travis
-# sonar.links.scm=https://github.com/SonarSource/sonarcloud_example_go-sqscanner-travis
-# sonar.links.issue=https://github.com/SonarSource/sonarcloud_example_go-sqscanner-travis/issues
+sonar.links.homepage=https://github.com/FATHOM5/haversine
+sonar.links.ci=https://travis-ci.com/github/FATHOM5/haversine
+sonar.links.scm=https://github.com/FATHOM5/haversine
+sonar.links.issue=https://github.com/FATHOM5/haversine/issues
 
 # =====================================================
 #   Properties specific to Go
