--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@
 # =====================================================
 
 sonar.projectKey=FATHOM5_haversine
-# sonar.projectName=Go SQ-Scanner-based project analyzed on SonarCloud using Travis
+sonar.projectName=haversine
 sonar.projectVersion=1.0
 
 sonar.sources=.
