--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -24,8 +24,8 @@ sonar.links.issue=https://github.com/FATHOM5/haversine/issues
 #   Properties specific to Go
 # =====================================================
 
-# sonar.go.gometalinter.reportPaths=gometalinter-report.out
 sonar.go.govet.reportPaths=govet-report.json
 #sonar.go.golint.reportPaths=golint-report.out
+sonar.go.golangci-lint.reportPaths=lint-report.out
 sonar.go.tests.reportPaths=gotest-report.json
 sonar.go.coverage.reportPaths=profile.cov
